--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/saysth?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=password
+
 server.port=8081
+
+spring.jpa.hibernate.ddl-auto=update
